src/components/testimonial/TestimonialManager.module.css
.container {
  position: relative;
}

.slides {
  display: flex;
  overflow-x: scroll;
  overflow-y: hidden;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;

}

.slides::-webkit-scrollbar {
  display: none;
}

.slide {
  flex-shrink: 0;
  transform-origin: center center;
  flex: 0 0 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 100px;
  scroll-snap-align: center;
  transition: all 0.2s;
}

.slide:first-child {
  margin-left: 25vw;
}

.slide:last-child {
  margin-right: 25vw;
}

.range {
  -webkit-appearance: none;
  width: 35%;
  height: 5px;
  border-radius: 5px;
  background: #d3d3d3;
  outline: none;
  opacity: 0.7;
  -webkit-transition: 0.2s;
  transition: opacity 0.2s;
}

.range::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 33%;
  height: 5px;
  background: #040403;
  cursor: pointer;
}

.left {
  transform: translateX(0%);
}
.center {
  transform: translateX(-100%);
}
.right {
  transform: translateX(-200%);
}

